<resources>
    <string name="app_name">LoginPrueba</string>

    <string name="Bienvenido">Bienvenid@:</string>
    <string name="tomar_orden">Toma tu orden</string>
    <string name="ordenes">Ver Ordenes</string>
    <string name="seleccionar_categoria">Seleccione una Categoria</string>

    <string name="imagen_producto">Imagen del producto</string>
    <string name="producto">Producto</string>
    <string name="contenido">Contenido</string>
    <string name="precio">Precio</string>

    <string name="seleccioneHamburguesas">Seleccione su Hamburguesa</string>
    <string name="seleccionPizza">Seleccione su Pizza</string>
    <string name="seleccioneBebida">Seleccione su Bebida</string>
    <string name="seleccioneSnack">Seleccione su Snack</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>