<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="370dp"
    android:layout_height="84dp"
    android:layout_marginStart="23dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#C9009688">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@mipmap/hamburguesa"
        android:contentDescription="@string/imagen_producto"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="2dp"
        android:id="@+id/imgCard"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/producto"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/imgCard"
        app:layout_constraintLeft_toRightOf="@id/imgCard"
        android:layout_marginTop="4dp"
        android:layout_marginStart="10dp"
        android:id="@+id/producto"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contenido"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/producto"
        app:layout_constraintLeft_toRightOf="@id/imgCard"
        android:layout_marginTop="4dp"
        android:layout_marginStart="10dp"
        android:id="@+id/contenido"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/precio"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/contenido"
        app:layout_constraintLeft_toRightOf="@id/imgCard"
        android:layout_marginTop="4dp"
        android:layout_marginStart="10dp"
        android:id="@+id/precio"
        />

</androidx.constraintlayout.widget.ConstraintLayout>