<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrincipalFragment"
    android:background="#959C27B0">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txvTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Bienvenido"
            android:textSize="35sp"
            android:textStyle="bold|normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".06" />

        <TextView
            android:id="@+id/txvOrden"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/tomar_orden"
            android:textSize="25sp"
            android:textStyle="bold|normal"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txvTitulo" />

        <ImageView
            android:id="@+id/imgHamburguesa"
            android:layout_width="100dp"
            android:layout_height="105dp"
            android:layout_marginTop="208dp"
            android:src="@mipmap/hamburguesa"
            app:layout_constraintHorizontal_bias="0.19"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgPapas"
            android:layout_width="100dp"
            android:layout_height="105dp"
            android:layout_marginTop="208dp"
            android:src="@mipmap/papas"
            app:layout_constraintHorizontal_bias="0.738"
            app:layout_constraintLeft_toLeftOf="@id/imgHamburguesa"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgFrape"
            android:layout_width="100dp"
            android:layout_height="105dp"
            android:layout_marginTop="56dp"
            android:src="@mipmap/frappe"
            app:layout_constraintHorizontal_bias="0.189"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgHamburguesa" />

        <ImageView
            android:id="@+id/imgPizza"
            android:layout_width="100dp"
            android:layout_height="105dp"
            android:layout_marginTop="56dp"
            android:src="@mipmap/pizza"
            app:layout_constraintHorizontal_bias="0.787"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgPapas" />

        <Button
            android:id="@+id/btnOrdenes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:text="@string/ordenes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>

